<resources>
    <string name="app_name">Goph-riend</string>
    <string name="tab_text_1">People</string>
    <string name="tab_text_2">Clubs</string>
    <string name="tab_text_3">Events</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">You must enter UMN Email Login Credentials</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sarah">Sarah has sent you a request!</string>
    <string name="jill">Jill has accepted your request!</string>
    <string name="john">John has accepted your request!</string>
    <string name="ui">UI Design and Development has accepted you into their club!</string>

    <!--Tin's stuffs below-->
    <string-array name="Hour">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="lul">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="Interests">
        <item>Interests Drop Down</item>
        <item>Video games</item>
    </string-array>

    <string name="club1">Club1</string>
    <string name="club2">Club2</string>
    <string name="club3">Club3</string>
    <string name="club4">Club4</string>
    <string name="sample_club2_image">sample club2 image</string>
    <string name="sample_club1_image">sample club1 image</string>
    <string name="sample_club3_images">sample club3 images</string>
    <string name="sample_club4_images">sample club4 images</string>
    <string name="event1">Event1</string>
    <string name="event2">Event2</string>
    <string name="event3">Event3</string>
    <string name="event4">Event4</string>
    <string name="sample_event2_image">sample_event2_image</string>
    <string name="sample_event1_image">sample_event1_image</string>
    <string name="sample_event4_images">sample_event4_images</string>
    <string name="sample_event3_images">sample_event3_images</string>
    <string name="link_to_event_creation">link to event creation</string>
    <string name="link_to_add_club_creation">link_to_add_club_creation</string>
    <string name="example_club_picture">Example club picture</string>


</resources>